# fieldnotes

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  init-data-dirs.sh  ollamalogs.txt  prometheus.yml
worker/: Makefile  README.md  config.toml.example  pyproject.toml
worker/tests/: _fake_queue.py  conftest.py  test_anthropic_provider.py  test_app_describer.py  test_app_linker.py  test_apps_parser.py  test_attachments_e2e.py  test_attachments_util.py  test_backup.py  test_base_handler.py  test_calendar_auth.py  test_calendar_parser.py  test_calendar_source.py  test_chunker.py  test_circuit_breaker.py  test_cli.py  test_cli_cluster.py  test_cli_imports.py  test_cli_queue.py  test_cluster.py  test_cluster_writer.py  test_config.py  test_connections.py  test_content_update.py  test_corpus_empty.py  test_cross_source_resolution.py  test_cursor.py  test_cypher_no_id_function.py  test_daemon.py  test_dependency_parser.py  test_digest.py  test_e2e.py  test_email_extraction.py  test_embedder.py  test_error_paths.py  test_exif.py  test_extract_source_link_hints.py  test_extractor.py  test_file_parser.py  test_file_source_scan.py  (+75 more)
worker/tests/cli/: test_ask_error_format.py  test_itinerary.py  test_itinerary_summary.py  test_person.py  test_person_summary.py
worker/tests/integration/: itinerary_schema.json  person_profile_schema.json  test_itinerary_e2e.py  test_person_profile_e2e.py
worker/tests/mcp/: test_itinerary_tool.py  test_person_tool.py
worker/tests/query/: test_hybrid_filter.py  test_itinerary.py  test_person.py  test_question_time.py
worker/worker/: __init__.py  backup.py  circuit_breaker.py  cli.py  config.py  config.toml.example  daemon.py  doctor.py  gastown.py  health.py  infra.py  init.py  log_sanitizer.py  main.py  mcp_server.py  metrics.py  neo4j_driver.py  queue.py  serve_daemon.py  setup.py
worker/worker/cli/: __init__.py  ask.py  cluster.py  connections.py  digest.py  display.py  history.py  itinerary.py  itinerary_brief_prompt.py  migrate.py  person.py  person_brief_prompt.py  persons.py  queue.py  reformulator.py  reindex_references.py  stream.py  timeline.py
worker/worker/clustering/: __init__.py  app_linker.py  cluster.py  labeler.py  scheduler.py  writer.py
worker/worker/curation/: __init__.py  audit.py  persons.py
worker/worker/infrastructure/: grafana  prometheus.yml
worker/worker/models/: base.py  rate_limiter.py  registry.py  resolver.py
worker/worker/parsers/: __init__.py  _pattern_match.py  _safe_filename.py  _slack_permalink.py  apps.py  attachments.py  base.py  calendar.py  files.py  gmail.py  homebrew_parser.py  iwork.py  obsidian.py  omnifocus.py  registry.py  repositories.py  slack.py
worker/worker/pipeline/: __init__.py  app_describer.py  chunker.py  embedder.py  exif.py  extractor.py  geocode.py  progress.py  resolver.py  vision.py  vision_queue.py  writer.py
worker/worker/query/: __init__.py  _question_time.py  _time.py  connections.py  digest.py  graph.py  hybrid.py  person.py  (+7 more)
(+58 files in other folders)
