[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldnotes-worker"
version = "0.1.0"
description = "ML pipeline worker for the Fieldnotes personal knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "neo4j>=5.0",
    "qdrant-client>=1.7",
    "rapidfuzz>=3.0",
    "python-frontmatter>=1.0",
    "watchdog>=4.0",
    "langchain>=0.3",
    "hdbscan>=0.8",
    "umap-learn>=0.5",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
