[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldnotes-worker"
version = "0.1.0"
description = "ML pipeline worker for the Fieldnotes personal knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "httpx>=0.27",
    "neo4j>=5.0",
    "qdrant-client>=1.7",
    "rapidfuzz>=3.0",
    "python-frontmatter>=1.0",
    "watchdog>=4.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "ollama>=0.4",
    "numpy>=1.26",
    "pymupdf>=1.24",
    "openai>=1.0",
    "tenacity>=8.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.scripts]
fieldnotes = "worker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]
