[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldnotes"
version = "0.14.0"
description = "Personal knowledge graph — ingest, search, and serve your notes"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.86,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
    "neo4j>=5.0,<7.0",
    "qdrant-client>=1.7,<2.0",
    "rapidfuzz>=3.0,<4.0",
    "python-frontmatter>=1.0,<2.0",
    "watchdog>=4.0,<7.0",
    "langchain>=1.0,<2.0",
    "langchain-community>=0.4,<1.0",
    "scikit-learn>=1.3,<2.0",
    "umap-learn>=0.5,<1.0",
    "ollama>=0.4,<1.0",
    "numpy>=1.26,<3.0",
    "pymupdf>=1.24,<2.0",
    "openai>=1.0,<3.0",
    "tenacity>=8.0,<10.0",
    "google-auth-httplib2>=0.2,<1.0",
    "google-auth-oauthlib>=1.0,<2.0",
    "google-api-python-client>=2.0,<3.0",
    "croniter>=2.0,<7.0",
    "defusedxml>=0.7,<1.0",
    "gitpython>=3.1,<4.0",
    "mcp>=1.0",
    "prometheus-client>=0.20,<1.0",
    "prompt_toolkit>=3.0,<4.0",
    "rich>=13.0,<15.0",
]

[project.urls]
Repository = "https://github.com/mmlac/fieldnotes"

[tool.setuptools.package-data]
worker = ["templates/*", "config.toml.example", "infrastructure/**/*"]

[project.scripts]
fieldnotes = "worker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]
